this will correct image paths

--- a/Css/style.css
+++ b/Css/style.css
@@ -18,7 +18,7 @@
 }
 
 #delaniServices {
-	background-image: url(../images/bckgrnd2.jpg);
+	background-image: url('../images/bckgrnd2.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	width: 100%;
